--- a/02-adattipusokadatszerkezetek.Rmd
+++ b/02-adattipusokadatszerkezetek.Rmd
@@ -237,7 +237,7 @@ Ez egy újabb példa a kétélű flexibilitásra: azért fog működni, mert ily
 
 
 
-Lehetséges negatív indexelés is, ez kiválaszt mindent, _kivéve_ amit indexeltünk:
+Lehetséges negatív indexelés is, ez kiválaszt mindent, *kivéve* amit indexeltünk:
 ```{r}
 szamvektor[-3]
 szamvektor[-c(1, 3)]
@@ -405,4 +405,4 @@ idx <- "sz"
 lista[[ idx ]]
 ```
 
-Az adatkeret igazából egy, az oszlopokból - mint vektorokból - összerakott lista (tehát két szűkítés van: az elemek csak vektorok lehetnek _és_ ugyanolyan hosszúaknak kell lenniük).
+Az adatkeret igazából egy, az oszlopokból - mint vektorokból - összerakott lista (tehát két szűkítés van: az elemek csak vektorok lehetnek *és* ugyanolyan hosszúaknak kell lenniük).
