HTML fájl nevének javítása.

--- a/05-datatable.Rmd
+++ b/05-datatable.Rmd
@@ -1,4 +1,4 @@
-# Data table: egy továbbfejlesztett adatkeret
+# Data table: egy továbbfejlesztett adatkeret {#datatable}
 
 Amint volt már róla szó korábban, az adatkeret (data frame) az alapvető struktúra a feldolgozandó adatok, adatbázisok tárolására és kezelésére az R-ben. Noha ennek a célnak megfelel, számos téren kiegészíthető, továbbfejleszthető. Az évek alatt két nagy lehetőség kristályosodott ki és ment át széleskörű használatba, mely ilyen továbbfejlesztést jelent: a `dplyr` csomag és a `data.table` csomag. Jelen fejezet a `data.table` működését és jellemzőit fogja bemutatni, különös tekintettel a hagyományos data frame-mel való összevetésre.
 
